# naia-socket-docker-example

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  clion-run-config-backup.xml  docker-compose.yaml
.run/: -----.run.xml  ----.run.xml  ---.run.xml  --.run.xml  Build Linux Client.run.xml  Build UDP Server Docker Image.run.xml  Build UDP Server.run.xml  Build Wasm Client.run.xml  Build WebRTC Server Docker Image.run.xml  Build WebRTC Server.run.xml  Clean.run.xml  Deploy Wasm Client.run.xml  Read Docker Image Logs.run.xml  Run Linux Client.run.xml  Run UDP Server (Local).run.xml  Run WebRTC Server (Local).run.xml  Start Docker Container.run.xml  Stop Docker Container.run.xml
client/: Cargo.toml
client/app/: Cargo.toml
client/app/src/: app.rs
client/miniquad/: Cargo.toml
client/miniquad/src/: main.rs
client/src/: app.rs  main.rs
client/wasm_bindgen/: Cargo.toml
client/wasm_bindgen/src/: app_loop.rs  main.rs
server/: Cargo.toml  Dockerfile  Makefile.toml  docker-compose.yaml
server/src/: app.rs
shared/: Cargo.toml
shared/src/: lib.rs  shared.rs
