[package]
name = "naia-socket-docker-example-shared"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = ".."
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[dependencies]
naia-socket-shared = { path = "../../naia-socket/shared", features = ["wbindgen"] }