[package]
name = "naia-socket-docker-example-client-app"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[features]
mquad = [ "naia-client-socket/mquad", "naia-socket-docker-example-shared/mquad", "miniquad" ]
wbindgen = [ "naia-client-socket/wbindgen", "naia-socket-docker-example-shared/wbindgen" ]

[dependencies]
naia-client-socket = { version = "0.7.4" }
naia-socket-docker-example-shared = { path = "../../shared" }
cfg-if = "0.1.10"
log = "0.4.6"
miniquad = { version = "=0.3.0-alpha.28", features = ["log-impl"], optional = true }