[package]
name = "naia-socket-docker-example-client-wb"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[dependencies]
naia-socket-docker-example-client-app = { path = "../app", features = [ "wbindgen" ] }
log = "0.4.6"
cfg-if = "0.1.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple_logger = { version = "=2.0.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-logger = { version = "0.2.0" }
wasm-bindgen = { version = "0.2.45", features = [ "serde-serialize" ] }
web-sys = { version = "0.3.4", features = [ 'Window' ] }